--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #aaa;
+  background: #5e5967;
   justify-content: space-between;
   padding: 0.3rem;
   text-align: center;
@@ -7,7 +7,11 @@
 
 h1 a {
   text-decoration: none;
-  color: black;
+  color: white;
+}
+
+h1 a:hover {
+  color: #f58fa0;
 }
 
 h1 {
@@ -18,14 +22,35 @@ h1 {
   align-content: center;
   justify-content: center;
   flex-direction: row;
-  background-color: pink;
   padding: 0.3rem;
 }
 
 h2 {
   text-align: center;
   padding: 1rem;
+  font-size: 1.8rem;
   font-family: 'Handlee', cursive;
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    background: #5e5967;
+    justify-content: space-between;
+    padding: 0.6rem;
+    text-align: center;
+  }
+
+  h1 {
+    margin: 1rem;
+    display: inline-flex;
+    padding: 0.5rem;
+    font-size: 2.3rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+    margin-bottom: 3.5rem;
+  }
 }
 
 
