--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-  background: #5e5967;
+  background: #575063;
   justify-content: space-between;
   padding: 0.3rem;
   text-align: center;
@@ -11,7 +11,7 @@ h1 a {
 }
 
 h1 a:hover {
-  color: #f58fa0;
+  color: #f8a4b2;
 }
 
 h1 {
