--- a/src/AddRecipe/AddRecipe.css
+++ b/src/AddRecipe/AddRecipe.css
@@ -70,12 +70,15 @@
     font-size: 1.5rem;
   }
 
+  #foodname {
+    width: 23rem;
+  }
+
   #ingredients,
   #description {
     height: 10rem;
     width: 35rem;
   }
-
 }
 
 
