--- a/src/RecipeItem/RecipeItem.css
+++ b/src/RecipeItem/RecipeItem.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background: #faceac;
+  background-color: #fcca9e;
 }
 
 .recipeItem {
@@ -18,7 +18,8 @@ body {
 }
 
 button {
-  background: #81dfb5;
+  background-color: #328540;
+  color: white;
   padding: 0.6rem;
   font-size: 1.1rem;
   margin-top: 0.5rem;
@@ -37,6 +38,7 @@ li {
   .recipeItem {
     margin: auto;
     font-size: 1.6rem;
+    margin-bottom: 2.5rem;
   }
 
   .recipeItem_info {
@@ -45,13 +47,30 @@ li {
   }
 
   button {
-    background: #6ecfa3;
+    background-color: #328540;
     padding: 0.8rem;
     font-size: 1.5rem;
     margin-top: 1.2rem;
     margin-bottom: 2.5rem;
   }
-
 }
+
+@media screen and (min-width: 1025px) {
+  button {
+    background-color: #328540;
+    padding: 0.8rem;
+    font-size: 1.5rem;
+    margin-top: 1.2rem;
+    margin-bottom: 2.5rem;
+    opacity: 0.7;
+    transition: 0.3s;
+    text-decoration: none;
+  }
+
+  button:hover {
+    opacity: 1.3;
+  }
+}
+
 
 
