--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,8 +1,19 @@
 .header {
-  background: #575063;
+  background: #5c526d;
   justify-content: space-between;
-  padding: 0.2rem;
   text-align: center;
+  display: flex;
+  overflow: hidden;
+  position:fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.header img{
+  height: 1.7rem;
+  width: 9rem;
+  margin-top: 0.8rem;
 }
 
 h1 a {
@@ -16,13 +27,14 @@ h1 a:hover {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
+  font-size: 1.07rem;
   text-align: center;
-  margin: 0.2rem;
+  margin: 0.3rem;
   display: inline-flex;
   align-content: center;
   justify-content: center;
   flex-direction: row;
-  padding: 0.2rem;
+  padding: 0.7rem;
 }
 
 h2 {
@@ -30,26 +42,39 @@ h2 {
   padding: 1rem;
   font-size: 1.8rem;
   font-family: 'Handlee', cursive;
+  margin-top: 4rem;
 }
 
 @media screen and (min-width: 1024px) {
+}
+
+@media screen and (min-width: 1025px) {
   .header {
-    background: #5e5967;
-    justify-content: space-between;
     padding: 0.6rem;
     text-align: center;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+
+  .header img{
+    width: 17rem;
+    margin-top: 2rem;
+    height: 2rem;
   }
 
   h1 {
     margin: 1rem;
     display: inline-flex;
-    padding: 0.5rem;
+    padding: 0.2rem;
     font-size: 2.3rem;
   }
 
   h2 {
-    font-size: 3.4rem;
+    font-size: 3.6rem;
     margin-bottom: 3.5rem;
+    margin-top: 10rem;
   }
 }
 
