--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,10 +1,11 @@
 .header {
-  background: #5c526d;
+  background: #5c4f72;
+  color: white;
   justify-content: space-between;
   text-align: center;
   display: flex;
   overflow: hidden;
-  position:fixed;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -22,7 +23,7 @@ h1 a {
 }
 
 h1 a:hover {
-  color: #f78497;
+  color: #f8e74d;
 }
 
 h1 {
