--- a/src/RecipeItem/RecipeItem.css
+++ b/src/RecipeItem/RecipeItem.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #facfaa;
+  background-color: #eeecec;
 }
 
 .recipeItem {
@@ -14,11 +14,11 @@ body {
   border: 0.1rem solid black;
   max-width: 47rem;
   padding-right: 1.2rem;
-  box-shadow: 2px 2px 5px #434343;
+  box-shadow: 2px 2px 5px #424141;
 }
 
 button {
-  background-color: #1a7e2b;
+  background-color: #2a8a93;
   color: white;
   padding: 0.6rem;
   font-size: 1.1rem;
